--- a/index.html
+++ b/index.html
@@ -4,33 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webpage</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css\style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./fntwsm/all.css">
+    <link rel="stylesheet" href="css\all.css">
     <link rel="icon" href="./Images/fire.png" >
 </head>
 <body>
     <nav class="navbar">
         <ul class="navbar-nav">
+            <li class="nav-logo">
+                <i class="fas fa-bars fa-5x"></i>
+            </li>
+
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="fas fa-tasks"></i>
-                    <span class="link-text"></span>
+                    <i class="fas fa-align-left fa-2x"></i>
+                    <span class="link-text">FASZOMR</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="fas fa-align-left"></i>
-                    <span class="link-text"></span>
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="fa fa-file-text-o" aria-hidden="true" ></i>
-                    <span class="link-text"></span>
+                    <i class="fas fa-align-left fa-2x"></i>
+                    <span class="link-text">GECI</span>
                 </a>
             </li>
 
