--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="hu">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,14 +20,14 @@
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="fas fa-align-left fa-2x"></i>
-                    <span class="link-text">FASZOMR</span>
+                    <span class="link-text">Projects</span>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="fas fa-align-left fa-2x"></i>
-                    <span class="link-text">GECI</span>
+                    <span class="link-text">Contact</span>
                 </a>
             </li>
 
@@ -38,6 +38,7 @@
         <div class="header-content">
             <h1>Welcome to my website!</h1>
         </div>
+        <div class="header-logo"></div>
     </div>
 
     <main>
