Menu-bars-complete

--- a/index.html
+++ b/index.html
@@ -38,10 +38,27 @@
         <div class="header-content">
             <h1 class="title">Welcome to my website!</h1>
         </div>
-        <div class="header-logo"></div>
+        <div class="hover-box">
+            <div class="header-logo" title="My profiles">
+                <ul class="logo-list">
+                    <li class="logo-item">
+                        <a href="#" class="list-link">
+                            <span class="list-text">Github</span>
+                        </a>
+                    </li>
+
+                    <li class="logo-item">
+                        <a href="#" class="list-link">
+                            <span class="list-text">Github</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <main>
+        
         <p> <i class="fa fa-file-text-o" aria-hidden="true" ></i>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at nisl tempus, aliquam mauris sit amet, hendrerit lectus. Praesent quam lorem, rhoncus vel porttitor sed, hendrerit et ex. Maecenas scelerisque eget metus vitae tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla ut tellus ac purus consectetur sodales nec ac nulla. Aenean nec diam sed lorem malesuada accumsan. Nam in lectus sit amet odio mattis cursus. Phasellus in malesuada nisl. Pellentesque et risus non augue tincidunt blandit et et tortor. Aliquam gravida ac eros ut porttitor. Nulla et orci non mi dictum pellentesque. In mattis nibh sit amet est laoreet mattis. Nam suscipit blandit libero, malesuada efficitur sapien scelerisque vitae.
 
