Second-project-added | Possible-profile-fix | Path-changes

--- a/iframes/index3.html
+++ b/iframes/index3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="files/style3.css" type="text/css">
-    <script src="files/code3.js"></script>
+    <link rel="stylesheet" href="/files/style3.css" type="text/css">
+    <script src="/files/code3.js"></script>
     <title>Oldal</title>
 </head>
 <body>
