--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
         <div class="intro"><img class ="profile-img" src="Images/tempImg.jpg" title="That's me!" alt="A picture of myself">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque a nisl commodo, iaculis eros viverra, dictum ligula. Pellentesque euismod, ligula sed pretium pellentesque, dolor tellus maximus diam, quis posuere nisi est eu neque. Duis nulla tellus, tempus eget turpis sit amet, commodo auctor massa. Suspendisse accumsan blandit urna nec congue. Aliquam erat volutpat. Fusce mi leo, condimentum in tincidunt sit amet, placerat ac turpis. Sed egestas sit amet neque sit amet mattis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas laoreet facilisis luctus. Nam vitae elementum velit. Sed viverra gravida lectus, vel cursus nisl faucibus sit amet. Fusce porta, justo at cursus facilisis, libero libero iaculis nisi, vel pulvinar arcu felis quis lorem. Morbi ac fermentum nunc.</div>
         <div class="main-posts">
             <div class="proj-container">
-            <div class="proj-header">Element creation test page: my second attempt trying to create elements in JS</div>
-            <iframe class="crt-proj" src="index3.html" scrolling="no"></iframe>
+                <div class="proj-header">Element creation test page: my second attempt trying to create elements in JS</div>
+                <iframe class="crt-proj" src="iframes/index3.html" scrolling="no"></iframe>
+            </div>
+
+            <div class="proj-container">
+                <div class="proj-header">Element creation test page: my second attempt trying to create elements in JS</div>
+                <iframe class="hhaven-proj" src="iframes/hindex.html" scrolling="no"></iframe>
             </div>
         </div>
 
